tests/cases/scc/error/0006-endif.c.res
./tests/cases/scc/error/0006-endif.c:8:1:	error:   unmatched #endif.
exit code 1
